@@ -143,15 +143,43 @@ class EmailUserForm {
 	}
 
 	function doSubmit() {
-		global $wgOut, $wgUser;
+		global $wgOut, $wgUser, $wgUserEmailUseReplyTo;
 
 		$to = new MailAddress( $this->target );
 		$from = new MailAddress( $wgUser );
 		$subject = $this->subject;
 
 		if( wfRunHooks( 'EmailUser', array( &$to, &$from, &$subject, &$this->text ) ) ) {
+			
+			if( $wgUserEmailUseReplyTo ) {
+				// Put the generic wiki autogenerated address in the From:
+				// header and reserve the user for Reply-To.
+				//
+				// This is a bit ugly, but will serve to differentiate
+				// wiki-borne mails from direct mails and protects against
+				// SPF and bounce problems with some mailers (see below).
+				global $wgEmergencyContact;
+				$mailFrom = new MailAddress( $wgEmergencyContact );
+				$replyTo = $from;
+			} else {
+				// Put the sending user's e-mail address in the From: header.
+				//
+				// This is clean-looking and convenient, but has issues.
+				// One is that it doesn't as clearly differentiate the wiki mail
+				// from "directly" sent mails.
+				//
+				// Another is that some mailers (like sSMTP) will use the From
+				// address as the envelope sender as well. For open sites this
+				// can cause mails to be flunked for SPF violations (since the
+				// wiki server isn't an authorized sender for various users'
+				// domains) as well as creating a privacy issue as bounces
+				// containing the recipient's e-mail address may get sent to
+				// the sending user.
+				$mailFrom = $from;
+				$replyTo = null;
+			}
 
-			$mailResult = userMailer( $to, $from, $subject, $this->text );
+			$mailResult = UserMailer::send( $to, $mailFrom, $subject, $this->text, $replyTo );
 
 			if( WikiError::isError( $mailResult ) ) {
 				$wgOut->addHTML( wfMsg( "usermailererror" ) . $mailResult);
